@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v22.3.30-cur, done by cs@nop.
--;-;-;2022-03-30 09:17:33, took 00:08:14, with 80 workers, on 2780 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2022-03-30 10:15:21, took 00:08:05, with 80 workers, on 2780 cases, 0 failed, 0 traces, 2 retries
 -;-;-;./rtr.bin
 http://sources.freertr.net/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.freertr.net/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
